통합메인 수정

--- a/public/css/willbes/style_main.css
+++ b/public/css/willbes/style_main.css
@@ -74,7 +74,7 @@
 .main .Act2 .dDay {
     font-size: 27px;
     font-weight: 600;
-    padding: 0 25px;
+    padding: 0 15px 0 25px;
 }
 .main .Act2 .line {
     background: #e2e2e2;
