--- a/public/css/willbes/style_gosi.css
+++ b/public/css/willbes/style_gosi.css
@@ -319,68 +319,65 @@
     margin-right: 5px;
 }
 
+/**/
 /*메인 수강후기*/
-.lecReviewBx .sliderNumRv {position:relative; overflow: hidden; font-size:14px} 
-.lecReviewBx .sliderNumRv .lecReview {float:left; display: block; width:373px !important; min-height:120px !important; border-right:1px solid #d6d6d6; margin-top: 20px; line-height: 1.3}
-.lecReviewBx .sliderNumRv .lecReview:nth-child(3n+3) {border-right:0}
-.lecReviewBx .sliderNumRv .imgBox {
+.reviewBx {height:150px; overflow: hidden; border-bottom:1px solid #ccc}
+.reviewBx .sliderNumV {position:relative} 
+.reviewBx .sliderNumV .lecReview {float:left; display: inline-block; width:370px !important; min-height:120px !important; margin-top:30px; line-height: 1.3}
+.reviewBx .sliderNumV .imgBox {
     float: left;
     width: 82px;
     margin: 0 15px 0 25px;
     background:#e1e1e1;
 }
-.lecReviewBx .sliderNumRv .imgBox img {
+.reviewBx .sliderNumV .imgBox img {
     width: 100%;
 } 
-.lecReviewBx .sliderNumRv .imgBox.cover {
+.reviewBx .sliderNumV .imgBox.cover {
     position: relative;
 }
-.lecReviewBx .sliderNumRv .imgBox.cover img.coverImg {
+.reviewBx .sliderNumV .imgBox.cover img.coverImg {
     position: absolute;
 }
 
-.lecReviewBx .sliderNumRv .lecReview ul {position: absolute; top:0; left:130px; width:220px}
-.lecReviewBx .sliderNumRv .lecReview li {margin-bottom: 5px; color:#3a3a3a}
-.lecReviewBx .sliderNumRv .lecReview li:first-child {color:#c7763c; font-size:16px; font-weight: 600}
-.lecReviewBx .sliderNumRv .lecReview li:nth-child(2) {font-weight: 600}
+.reviewBx .sliderNumV .lecReview ul {position: absolute; top:0; left:130px; width:220px}
+.reviewBx .sliderNumV .lecReview li {margin-bottom: 5px; color:#3a3a3a}
+.reviewBx .sliderNumV .lecReview li:first-child {color:#c7763c; font-size:16px; font-weight: 600}
+.reviewBx .sliderNumV .lecReview li:nth-child(2) {font-weight: 600}
 
-.lecReviewBx .sliderNumRv:after {content:''; display: block; clear:both}
+.reviewBx .sliderNumV:after {content:''; display: block; clear:both}
 
-.lecReviewBx.nSlider .bx-wrapper .bx-prev {
-    background: url("../../img/willbes/prof/btn_prev.png") no-repeat 0 0;
+.reviewBx .bx-wrapper .bx-prev {
+    background: url("../../img/willbes/prof/btn_prev.png") no-repeat 0 0 !important;
 }
-.lecReviewBx.nSlider .bx-wrapper .bx-next {
-    background: url("../../img/willbes/prof/btn_next.png") no-repeat 0 0;
+.reviewBx .bx-wrapper .bx-next {
+    background: url("../../img/willbes/prof/btn_next.png") no-repeat 0 0 !important;
     left: 20px;
 }
-.lecReviewBx.nSlider .bx-wrapper .bx-controls-direction {
+.reviewBx .bx-wrapper .bx-controls-direction {
     position: absolute;
-    top: -20px;
-    right: 0;
+    top: 0;
+    right: 10px;
     width: 40px;
     height: 20px;
-    background: #fff;
 }
-.lecReviewBx.nSlider .bx-wrapper .bx-controls-direction a {
+.reviewBx .bx-wrapper .bx-controls-direction a {
     width: 20px;
     height: 20px;
 }
-.lecReviewBx.nSlider .bx-wrapper .bx-pager {
+.reviewBx .bx-wrapper .bx-pager {
     width: auto;
     position: absolute;
-    top: -15px;
-    right: 50px;
+    top: 5px;
+    right: 60px;
     bottom: 0;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 300;
     color: #888;
     margin: 0;
     padding: 0;
     letter-spacing: 0;
 }
-
-
-
 
 
 /* Main Container : Gosi */
