교수소개 리스트, 경행경채 메인 수정

--- a/public/css/willbes/style_cop_adm.css
+++ b/public/css/willbes/style_cop_adm.css
@@ -171,6 +171,19 @@
     background: #fff url("../../img/willbes/cop_adm/visual/visual_tit02_stit.png") no-repeat 37px 144px; 
 }
 
+.adm .CurriStepBox .CurriView a {
+    display: block;
+    padding:8px 0;
+    text-align: center;
+    background: #008b6c;
+    color:#fff;
+    font-size: 14px;
+    border-radius: 25px;
+}
+.adm .CurriStepBox .CurriView a:hover {
+    background: #000;
+}
+
 .adm .CurriStepBox .CurriStep > li a:hover {
     border:1px solid #008b6c;
     color:#fff;
