--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -11024,4 +11024,6 @@ table.acadlecInfoPackageTable tr.Top td {
         margin: 30px 0 0 0;
     }
 }
-
+.table-condensed * {
+    font-size:11px !important
+}
