--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -11024,3 +11024,7 @@ table.acadlecInfoPackageTable tr.Top td {
         margin: 30px 0 0 0;
     }
 }
+
+_:-ms-fullscreen, :root .datepicker {
+    width: 250px !important;
+}
