--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -11025,6 +11025,6 @@ table.acadlecInfoPackageTable tr.Top td {
     }
 }
 
-_:-ms-fullscreen, :root .datepicker {
+_:-ms-fullscreen, :root .table-condensed {
     width: 250px !important;
 }
