내강의실 >무한PASS존 >무한PASS강좌 > 강좌추가 팝업

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3710,7 +3710,7 @@ table.classTable tr td.w-data {
 .LeclistTable .listTable tr th,
 .LeclistTable .listTable tr td {
     text-align: center;
-    line-height: 40px !important;
+    line-height: 1.5;
     letter-spacing: 0;
 }
 .LeclistTable .csTable tr td {
