강좌추가 팝업, 공통 테이블 TD, TH 높이값 재설정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3710,8 +3710,9 @@ table.classTable tr td.w-data {
 .LeclistTable .listTable tr th,
 .LeclistTable .listTable tr td {
     text-align: center;
-    line-height: 1.5;
+    line-height: 1.5 !important;
     letter-spacing: 0;
+    padding:15px 0;
 }
 .LeclistTable .csTable tr td {
     line-height: 1.4 !important;
@@ -3725,7 +3726,6 @@ table.classTable tr td.w-data {
     background: #e4e4e4;
     width: 1px;
     height: 11px;
-    margin: 14px 0;
 }
 .LeclistTable .listTable tbody tr td.w-free .w-sp {
     float: inherit;
@@ -8097,7 +8097,7 @@ table.PassZoneTable .w-data {
     width: 60px;
 }
 .PASSZONE-List .willbes-Lec-Search .subBtn a {
-    width: 60px;
+    /*width: 60px;*/
     height: 27px;
     font-size: 12px;
     line-height: 18px;
