내강의실 >무한PASS존 > 강좌추가 팝업 위치 css 수정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7752,6 +7752,8 @@ table.PassZoneTable .w-data {
 .willbes-Layer-PassBox.abs {
     display: none;
     position: absolute;
+    left:50%;
+    margin-left: -50%;
     z-index: 110;
     border: 1px solid #2f2f2f;
 }
