--- a/public/css/willbes/style_cop_acad.css
+++ b/public/css/willbes/style_cop_acad.css
@@ -621,19 +621,22 @@
     background: url("../../img/willbes/cop_acad/icon_rq01.png") no-repeat 3px center;
 }
 .cop_acad .MainQuickMenu li:nth-child(2) a {
-    background: url("../../img/willbes/cop_acad/icon_rq02.png") no-repeat 3px center;
+    background: url("../../img/willbes/cop_acad/icon_rq07.png") no-repeat 3px center;
 }
 .cop_acad .MainQuickMenu li:nth-child(3) a {
-    background: url("../../img/willbes/cop_acad/icon_rq03.png") no-repeat 3px center;
+    background: url("../../img/willbes/cop_acad/icon_rq02.png") no-repeat 3px center;
 }
 .cop_acad .MainQuickMenu li:nth-child(4) a {
-    background: url("../../img/willbes/cop_acad/icon_rq04.png") no-repeat 3px center;
+    background: url("../../img/willbes/cop_acad/icon_rq03.png") no-repeat 3px center;
 }
 .cop_acad .MainQuickMenu li:nth-child(5) a {
     background: url("../../img/willbes/cop_acad/icon_rq05.png") no-repeat 3px center;
 }
 .cop_acad .MainQuickMenu li:nth-child(6) a {
     background: url("../../img/willbes/cop_acad/icon_rq06.png") no-repeat 3px center;
+}
+.cop_acad .MainQuickMenu li:nth-child(7) a {
+    background: url("../../img/willbes/cop_acad/icon_rq08.png") no-repeat 3px center;
 }
 
 /*sub 메인*/
