--- a/public/css/willbes/style_cop_acad.css
+++ b/public/css/willbes/style_cop_acad.css
@@ -117,7 +117,7 @@
     margin-right:14px;
     margin-bottom: 14px;
     overflow: hidden;
-    background: url("../../img/willbes/cop_acad/prof/prof_temp.jpg") no-repeat 0 0;
+    background: url("../../img/willbes/cop_acad/prof/prof_temp.jpg") no-repeat center center;
 }
 .caProfBox li:first-child,
 .caProfBox li:nth-child(6){
@@ -131,7 +131,7 @@
 .caProfBox li img {
     position: absolute;
     left:50%;
-    margin-left: -120px;
+    margin-left:-50%;
 }
 .caProfBox .caProfBtsn {
     position: absolute;
