아이콘, 플레이어 강의 리스트 정렬

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -10321,6 +10321,7 @@ table.acadlecInfoPackageTable tr.Top td {
     white-space: nowrap;
     overflow: hidden;
     padding: 0 10px;
+    text-align: left;
 }
 
 /* Video Player : vodTabs : vodSbjBox */
