--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7430,9 +7430,10 @@ ul li.profList .willbes-Layer-ProfileBox {
     margin: -4px 0 0 5px;
 }
 .MyInfoBoxList .List-Table.myTablet {
-    background: url("../../img/willbes/mypage/icon_pc_n.png") no-repeat 0 4px;
-    padding: 18px 0 18px 110px;
+    background: url("../../img/willbes/mypage/icon_pc_n.png") no-repeat -20px 4px;
+    padding: 18px 0 18px 80px;
     margin: 0;
+    min-height: 86px;
 }
 .MyInfoBoxList .List-Table.myTablet li {
     height: 25px;
