--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -5116,12 +5116,11 @@ span.calendar_btn {
     margin: 0 5px;
 }
 .LeclistTable .buyTable .tBox {
-    /*float: right;*/
+    float: right;
     margin-top: 5px;
 }
 .LeclistTable .buyTable .w-coupon {
     float: right;
-    vertical-align: middle;
 }
 .LeclistTable .buyTable tr td .w-coupon a {
     display: inline-block;
