--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -733,6 +733,9 @@ select[disabled] {
 .pt4 {
   padding-top: 4px !important;
 }
+.pt5 {
+  padding-top: 5px !important;
+}
 .pt10 {
   padding-top: 10px !important;
 }
@@ -815,6 +818,9 @@ select[disabled] {
 .pb-none {
   padding-bottom: 0 !important;
 }
+.pb5 {
+  padding-bottom: 5px !important;
+}
 .pb10 {
   padding-bottom: 10px !important;
 }
@@ -854,6 +860,7 @@ select[disabled] {
 .pb130 {
   padding-bottom: 130px !important;
 }
+
 
 .tx11 {
   font-size: 11px;
