--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7794,6 +7794,44 @@ table.PassZoneTable .w-data {
     width: 100%;
     padding: 30px 0 0;
 }
+.willbes-Layer-PassBox .passinfoWrap {
+    width: 100%;
+    padding: 30px 0 0;
+}
+.passinfoWrap li {
+    display: inline;
+    float: left;
+    width: 20%;
+}
+.passinfoWrap li a {
+    display: block;
+    height: 34px;
+    line-height: 34px;
+    border:1px solid #bdbdbd;
+    border-bottom:1px solid #0d74ae;
+    border-right:0;
+    text-align: center;
+    color:#bdbdbd;
+    font-weight: bold;
+}
+.passinfoWrap li:last-child a {
+    border-right:1px solid #bdbdbd;
+}
+.passinfoWrap li a:hover,
+.passinfoWrap li a.on {
+    border:1px solid #0d74ae;
+    border-bottom:1px solid #fff;
+    color:#0d74ae;
+}
+.passinfoWrap ul:after {
+    content:'';
+    display: block;
+    clear:both;
+}
+.passinfoWrap .passinfoCts {
+    margin-top:40px;
+}
+
 .willbes-Layer-PassBox .passzoneTitInfo {
     background: #f9f9f9;
     font-size: 16px;
@@ -7892,6 +7930,9 @@ table.PassZoneTable .w-data {
 }
 .willbes-Layer-PassBox900 {
     width: 900px;
+}
+.willbes-Layer-PassBox990 {
+    width: 990px;
 }
 .willbes-Layer-PassBox1100 {
     width: 1100px;
