--- a/public/css/willbes/style_gosi_gp.css
+++ b/public/css/willbes/style_gosi_gp.css
@@ -11,6 +11,11 @@
 }
 
 /* Main Container : MainVisual */
+.gp .MainVisual {
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
 .gp .MainVisual:after {
   content: "";
   display: block;
@@ -18,11 +23,17 @@
 }
 
 .gp .VisualBox {
-  position: relative;
-  width: 1920px;
-  margin:0 auto;
+  position:absolute;
+  top:0;
+  left:50%;
+  margin-left:-960px;
+  width:1920px;
   height: 400px;
   overflow: hidden;
+}
+.gp .VisualBox img {
+  height: 400px;
+  max-width: 1920px;
 }
 
 .gp .VisualBox .bx-wrapper .bx-controls-auto {
