--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -91,13 +91,14 @@
     line-height: 22px;
 }
 .Member .info-Txt-Wrap {
-    background: #f5f5f5;
-    height: 90px;
-    line-height: 86px;
+    background: #f5f5f5;    
+    line-height: 1.5;
     border-top: 1px solid #e2e2e2;
     border-bottom: 1px solid #e2e2e2;
     letter-spacing: 1px;
+    padding:20px 0;
 }
+
 .Member .notice-Txt {
     font-size: 12px;
     text-align: center;
