공.학 불꽃 소방팀, 공무원 css 수정

--- a/public/css/willbes/style_gosi_acad.css
+++ b/public/css/willbes/style_gosi_acad.css
@@ -1,4 +1,7 @@
 /*********************************************     Main Container : Gosi Acad     *********************************************/
+.GA .tx-color {
+    color: #ba560e;
+}
 /* Main Container : Gosi Acad */
 .GA .VisualBox {
     clear: both;
