--- a/public/css/willbes/style_gosi_law.css
+++ b/public/css/willbes/style_gosi_law.css
@@ -1,4 +1,8 @@
 /*********************************************     Main Container : law     *********************************************/
+.law .tx-color {
+    color: #ba560e;
+}
+
 .law .Section2 {
     background:url("../../img/willbes/gosi_law/visual/visual_top_bg.jpg") repeat-x left 95px;
 }
