--- a/public/css/willbes/style_gosi_acad.css
+++ b/public/css/willbes/style_gosi_acad.css
@@ -1,5 +1,6 @@
 /*********************************************     Main Container : Gosi Acad     *********************************************/
-.GA .tx-color {
+.GA .Menu .menu-List li.Acad a {
+    background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
     color: #ba560e;
 }
 /* Main Container : Gosi Acad */
