--- a/public/css/willbes/style_gosi_acad.css
+++ b/public/css/willbes/style_gosi_acad.css
@@ -1,7 +1,10 @@
 /*********************************************     Main Container : Gosi Acad     *********************************************/
-.GA .Menu .menu-List li.Acad a {
+.gosi .Menu .menu-List li.Acad a {
     background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
     color: #ba560e;
+}
+.gosi .Menu .menu-List li.Acad a .arrow-Btn {
+    background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
 }
 /* Main Container : Gosi Acad */
 .GA .VisualBox {
