--- a/public/css/willbes/style_gosi_law.css
+++ b/public/css/willbes/style_gosi_law.css
@@ -1,9 +1,11 @@
 /*********************************************     Main Container : law     *********************************************/
-.law .Menu .menu-List li.Acad a {
+.gosi .Menu .menu-List li.Acad a {
     background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
     color: #ba560e;
 }
-
+.gosi .Menu .menu-List li.Acad a .arrow-Btn {
+    background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
+}
 .law .Section2 {
     background:url("../../img/willbes/gosi_law/visual/visual_top_bg.jpg") repeat-x left 95px;
 }
