--- a/public/css/willbes/style_gosi_tech.css
+++ b/public/css/willbes/style_gosi_tech.css
@@ -1,9 +1,11 @@
 /*********************************************     Main Container : tech     *********************************************/
-.tech .Menu .menu-List li.Acad a {
+.gosi .Menu .menu-List li.Acad a {
     background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
     color: #ba560e;
 }
-
+.gosi .Menu .menu-List li.Acad a .arrow-Btn {
+    background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
+}
 .tech .Section2 {
     background:url("../../img/willbes/gosi_tech/visual/visual_top_bg.jpg") repeat-x left 95px;
 }
