--- a/public/css/willbes/style_gosi_law.css
+++ b/public/css/willbes/style_gosi_law.css
@@ -1,9 +1,9 @@
 /*********************************************     Main Container : law     *********************************************/
-.gosi .Menu .menu-List li.Acad a {
+.law .Menu .menu-List li.Acad a {
     background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
     color: #ba560e;
 }
-.gosi .Menu .menu-List li.Acad a .arrow-Btn {
+.law .Menu .menu-List li.Acad a .arrow-Btn {
     background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
 }
 .law .Section2 {
