--- a/public/css/willbes/style_gosi_tech.css
+++ b/public/css/willbes/style_gosi_tech.css
@@ -1,9 +1,9 @@
 /*********************************************     Main Container : tech     *********************************************/
-.gosi .Menu .menu-List li.Acad a {
+.tech .Menu .menu-List li.Acad a {
     background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
     color: #ba560e;
 }
-.gosi .Menu .menu-List li.Acad a .arrow-Btn {
+.tech .Menu .menu-List li.Acad a .arrow-Btn {
     background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
 }
 .tech .Section2 {
