--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1838,18 +1838,31 @@ table.auTable tr td {
 .Menu .menu-List li a {
     color: #363636;
 }
-.Menu .menu-List li.Acad a {
+
+/*경찰*/
+.Menu .menu-List li.Acad a,
+.Menu .menu-List li.Acad .police a {
     background: url("../../img/willbes/sub/icon_acad.gif") no-repeat 0 0;
     font-size: 16px;
     color: #0c5dc0;
     padding-left: 26px; 
 }
-.Menu .menu-List li.Acad a .arrow-Btn {
+.Menu .menu-List li.Acad a .arrow-Btn,
+.Menu .menu-List li.Acad a .police .arrow-Btn {
     background: url("../../img/willbes/sub/icon_arrow.gif") no-repeat 0 0;
     float: right;
     width: 4px;
     height: 8px;
     margin: 15px 5px 0;
+}
+
+/*공무원*/
+.Menu  li.Acad .pass a {
+    background: url("../../img/willbes/gosi/icon_acad.gif") no-repeat 0 0;
+    color: #ba560e;
+}
+.Menu .menu-List li.Acad .pass a .arrow-Btn {
+    background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
 }
 
 .Menu .menu-List-Center {
