--- a/public/css/willbes/style_gosi_acad.css
+++ b/public/css/willbes/style_gosi_acad.css
@@ -25,6 +25,7 @@
     line-height: 26px;
     border: 1px solid #fff;
     margin: 0 -2px;
+    width: 180px;
 }
 .GA .VisualBox .MaintabList.three ul li {
     width: 209px;
