--- a/public/css/willbes/style_cop.css
+++ b/public/css/willbes/style_cop.css
@@ -113,7 +113,7 @@
     position: relative;
 }
 .cop .smallTit {
-    border-top:1px solid #b8b8b8;
+    /*border-top:1px solid #b8b8b8;*/
     font-size: 22px;
     color:#363636;    
     position: relative;
