--- a/public/css/willbes/style_cop.css
+++ b/public/css/willbes/style_cop.css
@@ -328,7 +328,7 @@
 .newTopDday #ddaytime ul:after {content:""; display:block; clear:both}
 
 /* Main Container : flipped : Cop */
-.Flipped {background: url("../../img/willbes/cop/flipped/flipped_bg.jpg") repeat-x center 40px; padding-bottom: 90px;}
+.Flipped {background: url("../../img/willbes/cop/flipped/flipped_bg.jpg") repeat-x center 40px; padding-bottom: 90px; margin-top: 80px}
 .Flipped ul.inner {height:370px}
 .Flipped ul.inner li {position: relative; float:left; width:280px; height:100%; margin-left:20px; overflow: hidden;}
 .Flipped ul.inner li:first-child {width:520px; margin-left:0}
