--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -10622,9 +10622,11 @@ table.acadlecInfoPackageTable tr.Top td {
     position: absolute;
     top: -30px;
     right: 0;
+    width: 160px;
+    border-bottom:5px solid #000;
 }
 .Quick-Bnr {
-    float: left;
+    /*float: left;*/
 }
 
 /* 제대군인인증팝업 */
