--- a/public/css/willbes/style_cop_adm.css
+++ b/public/css/willbes/style_cop_adm.css
@@ -52,6 +52,7 @@
 .adm .youtubeWrap {    
     height:530px;
     padding:0 0 80px;
+    background:#fff;
 }
 .adm .youtubetabWrap {
     float: right;
