경챙경채 메인

--- a/public/css/willbes/style_cop_adm.css
+++ b/public/css/willbes/style_cop_adm.css
@@ -52,7 +52,7 @@
 .adm .youtubeWrap {    
     height:530px;
     padding:0 0 80px;
-    background:#fff;
+    background:#f7f7f7 url("../../img/willbes/cop/visual/visual_190323_03_bg.jpg") no-repeat center top;
 }
 .adm .youtubetabWrap {
     float: right;
