수정사항 변경

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1317,6 +1317,7 @@ body.memBody #Footer {
 }
 .lecTable .w-s-date input[type="text"] {
     width: 15%; 
+    min-width: 80px;
     height: 30px;
     padding: 0 0.6rem;
 }
