--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1791,9 +1791,10 @@ table.auTable tr td {
     margin-bottom: 10px;
 }
 .QuickDdayBox {
+    position: relative; 
     height: 100px;
     border: 1px solid #dbdbdb;
-    text-align: center; 
+    text-align: center;
 }
 .QuickDdayBox .q_tit {
     font-size: 15px;
