--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1816,7 +1816,7 @@ table.auTable tr td {
 }
 .QuickSlider .sliderNum {
     width: 100px;
-    height: 167px;
+    min-height: 167px;
     overflow: hidden;
 }
 .QuickSlider .bx-wrapper .bx-prev {
