--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1779,8 +1779,8 @@ table.auTable tr td {
 }
 /* Main Container : QuickMenu */
 .MainQuickMenu {
-    position: absolute;
-    top: 190px;
+    position: fixed;
+    top: 180px;
     right: 10px;
     width: 100px;
     height: auto;
@@ -1788,7 +1788,7 @@ table.auTable tr td {
 }
 .MainQuickMenu ul li {
     background: #fff;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 .QuickDdayBox {
     position: relative; 
