경찰 메인 유튜브 영상 교체, 퀵배너

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1790,7 +1790,7 @@ table.auTable tr td {
     background: #fff;
     margin-bottom: 8px;
 }
-.QuickDdayBox {
+.QuickSlider .QuickDdayBox {
     position: relative; 
     height: 100px;
     border: 1px solid #dbdbdb;
