--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -421,21 +421,40 @@ body.memBody #Footer {
     width: 100%;
     height: 100%;
 }
-
+.introBox li {display:inline; float:left; width: 50%;}
+.introBox li:last-child { 
+    background: #eb8136;
+}
+.introBox ul:after {content:''; display:block; clear:both}
+.introBox li div {padding:50px 10px; text-align: center}
 .introBox .subTit {
     font-size: 14px;
-    padding-top: 30px;
+}
+.introBox .siteTit {
+    font-size: 200%;
+    font-weight: bold;
+    margin-top:20px;
+}
+.introBox .siteTit span {
+    color:#fff;
+    padding-bottom:2px;
+    border-bottom:2px solid #fff;
+}
+.introBox .siteTit span:last-child {
+    color:#000;
+    border-bottom:2px solid #000;
 }
 .introBox .btnGo {
-    padding-bottom: 30px;
-}
-.introBox .btnGo span {
     display: inline-block;
     font-size: 14px;
-    border: 1px solid #000;
+    border: 1px solid #fff;
     border-radius: 5px;
-    padding: 8px 30px;
+    padding: 8px 20px;
+    margin-top: 40px;
+    color:#fff;
 }
+
+
 
 
 
