모바일 인트로

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -431,7 +431,7 @@ body.memBody #Footer {
     font-size: 14px;
 }
 .introBox .siteTit {
-    font-size: 200%;
+    font-size: 22px;
     font-weight: bold;
     margin-top:20px;
 }
