--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -10708,7 +10708,7 @@ table.acadlecInfoPackageTable tr.Top td {
 .leaveArmyJoin {padding-bottom:30px; overflow-y:scroll; width:740px; height: 700px;}
 .leaveArmyJoin .laj_top h3 {background:#000 url(http://www.willbescop.net/assets/img/common/pop_armytit1.png) no-repeat center center; height:60px; font-size:0}
 .leaveArmyJoin .laj_top h3.survery {background:#26759d url(http://www.willbescop.net/assets/img/common/pop_armytit2.png) no-repeat center center; height:60px; font-size:0}
-.leaveArmyJoin .laj_top div {text-align:center; padding:20px 0; border-bottom:1px dashed #CCCCCC}
+.leaveArmyJoin .laj_top div {text-align:center; padding:20px 0; border-bottom:1px dashed #ccc}
 .leaveArmyJoin .laj_top ul {background:#636363; font-size:95%; color:#fff; padding:20px 0 20px 25px}
 .leaveArmyJoin .laj_top li {margin-bottom:10px; margin-left:20px; list-style-type:disc}
 .leaveArmyJoin .laj_top span {color:#ede1c1}
@@ -11171,3 +11171,47 @@ table.acadlecInfoPackageTable tr.Top td {
 .table-condensed {
     width: 250px !important;
 }
+
+/**/
+.board_type{border:0 !important}
+.board_type{
+    width: 100% !important;
+    color: #666 !important;
+    border-top: solid 2px #000 !important;
+    border-left: solid 1px #d7d7d7 !important;
+    border-collapse: separate !important;
+    border-spacing: 0px !important;
+    text-align: left;
+} 
+.board_type caption {display:none}
+.board_type th{ 
+    padding:7px 0 !important;   
+    border-bottom:solid 1px #000 !important;
+    border-right:solid 1px #ccc !important;
+    background:#faf9fb !important;
+    color:#333 !important;
+    font-weight:bold !important;
+    line-height:18px !important;
+    vertical-align:middle !important;
+    font-size:12px !important;
+    text-align:center !important;
+}
+.board_type td {padding:5px !important;border-bottom:solid 1px #d7d7d7 !important; text-align:center !important; border-right:solid 1px #d7d7d7 !important; vertical-align:middle !important}
+.board_type td.td1 {text-align:left !important}
+.board_type td.td2 {    
+    font-weight: bold !important;
+    text-align: left;
+}
+.board_type td.td3 {font-size:120% !important; font-weight:bold !important; text-align:left !important}
+.board_type td.tdleft {text-align:left !important}
+.board_type p {line-height:120%}
+.board_type ul {margin:0; padding:0}
+.board_type ul li {list-style-type:none}
+.board_ul {margin:0 0 0 10px; padding:0 0 0 20px}
+.board_ul li {list-style-type:disc}
+
+.board_type a { display:block; padding:5px !important; border-radius:5px; text-decoration:none; background-color:#ff434a; color:#fff !important; font-weight:bold}
+.board_type a.cooming {background-color:#666 !important}
+.board_type a.freeLec {background-color:#06F !important}
+.board_type a:hover { background-color:#000 !important}
+
