--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -11225,8 +11225,8 @@ table.acadlecInfoPackageTable tr.Top td {
 .policyNew ol {margin-bottom:30px}
 .policyNew li {margin-bottom:8px; line-height:1.5; margin-left:20px}
 
-.titsubject {margin-top:20px; background:#f3f2f2; padding:20px 20px 10px; }
-.titsubject li {display:inline; float:left; width:50%; margin-left:0}
+.titsubject {margin-top:20px; background:#f3f2f2; padding:20px 20px 10px;}
+.titsubject li {display:inline; float:left; width:50%; margin-left:0; border:0}
 .titsubject li a {color:#000}
 .titsubject:after {content:""; display:block; clear:both}
 
