--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -11226,7 +11226,7 @@ table.acadlecInfoPackageTable tr.Top td {
 .policyNew li {margin-bottom:8px; line-height:1.5; margin-left:20px}
 
 .titsubject {margin-top:20px; background:#f3f2f2; padding:20px 20px 10px;}
-.titsubject li {display:inline; float:left; width:50%; margin-left:0; border:0}
+.titsubject li {display:inline; float:left; width:50%; margin:0; padding:0; border:0}
 .titsubject li a {color:#000}
 .titsubject:after {content:""; display:block; clear:both}
 
